# open_manipulator_p_simulations

./: .travis.yml  README.md
.github/workflows/: ros-ci.yml
open_manipulator_p_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_p_gazebo/config/: open_manipulator_p_position_controller_with_gripper.yaml
open_manipulator_p_gazebo/include/open_manipulator_p_gazebo/: omp_gripper_sub_publisher.hpp
open_manipulator_p_gazebo/launch/: controller_utils.launch.py  open_manipulator_p_controller.launch  open_manipulator_p_controller.launch.py  open_manipulator_p_gazebo.launch  open_manipulator_p_gazebo.launch.py  open_manipulator_p_position_controller.launch  open_manipulator_p_position_controller_with_gripper.launch  open_manipulator_p_spawner.launch.py  open_manipulator_p_with_gripper_controller.launch  open_manipulator_p_with_gripper_gazebo.launch
open_manipulator_p_gazebo/models/open_manipulator_p/: model.config  model.sdf  model_.sdf
open_manipulator_p_gazebo/src/: omp_gripper_sub_publisher.cpp
open_manipulator_p_gazebo/urdf/: open_manipulator_p_robot.sdf  open_manipulator_p_robot.urdf
open_manipulator_p_gazebo/worlds/: empty_world.model
open_manipulator_p_simulations/: CHANGELOG.rst  CMakeLists.txt  package.xml
open_manipulator_pro_gazebo/: CMakeLists.txt  package.xml
open_manipulator_pro_gazebo/config/: gazebo_controller.yaml  open_manipulator_pro_position_controller.yaml  open_manipulator_pro_position_controller_with_gripper.yaml
open_manipulator_pro_gazebo/launch/: open_manipulator_pro_gazebo.launch  open_manipulator_pro_position_controller.launch  open_manipulator_pro_position_controller_with_gripper.launch
open_manipulator_pro_gazebo/src/: gripper_sub_publisher.cpp
open_manipulator_pro_simulations/: CHANGELOG.rst  CMakeLists.txt  package.xml
