<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open_manipulator_p_simulations</name>
  <version>1.3.2</version>
  <description>
    ROS 2 packages for the OpenMANIPULATOR-P Simulations
  </description>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/open_manipulator_p_simulations</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_p_simulations</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_p_simulations/issues</url>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <author email="yhna@robotis.com">Yong-Ho Na</author>
  <author email="hjkim@robotis.com">Hye-Jong KIM</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>open_manipulator_p_gazebo</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
