<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_pro_simulations</name>
  <version>1.1.0</version>
  <description>
    Simulation packages for OpenManipulator
  </description>
  <license>Apache 2.0</license>
  <author email="hjkim@robotis.com">Hye-Jong KIM</author>
  <author email="jhshim@robotis.com">Ryan Shim</author>
  <author email="yhna@robotis.com">Yong-Ho Na</author>
  <maintainer email="hjkim@robotis.com">Hye-Jong KIM</maintainer>
  <url type="website">http://wiki.ros.org/open_manipulator_pro_simulations</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/open_manipulator_pro</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/open_manipulator_pro_simulations</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/open_manipulator_pro_simulations/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>open_manipulator_pro_gazebo</exec_depend>
  <export><metapackage/></export>
</package>
